--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
         <version>1.0-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>com.fasterxml.jackson</groupId>
+            <artifactId>jackson-bom</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>com.moensun.pay</groupId>
