--- a/triones-wxpay-spring-boot-starter/pom.xml
+++ b/triones-wxpay-spring-boot-starter/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.moensun.pay</groupId>
-        <artifactId>moensun-pay-spring-boot-starters</artifactId>
+        <artifactId>triones-pay-spring-boot-starters</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>wxpay-spring-boot-starter</artifactId>
-    <name>MS:Pay:WxPay:Starter</name>
+    <artifactId>triones-wxpay-spring-boot-starter</artifactId>
+    <name>Triones:Pay:WxPay:Starter</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -33,7 +33,7 @@
         </dependency>
         <dependency>
             <groupId>com.moensun.pay</groupId>
-            <artifactId>moensun-pay-wxpay</artifactId>
+            <artifactId>triones-pay-wxpay</artifactId>
         </dependency>
     </dependencies>
 </project>
