--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.moensun.pay</groupId>
+  <groupId>com.trionesdev.pay</groupId>
   <artifactId>triones-pay-spring-boot-starters</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -26,7 +26,7 @@
         <scope>import</scope>
       </dependency>
       <dependency>
-        <groupId>com.moensun.pay</groupId>
+        <groupId>com.trionesdev.pay</groupId>
         <artifactId>triones-pay</artifactId>
         <version>1.0-SNAPSHOT</version>
         <type>pom</type>
