--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.trionesdev.pay</groupId>
-  <artifactId>triones-pay-spring-boot-starters</artifactId>
+  <groupId>com.trionesdev.payment</groupId>
+  <artifactId>triones-payment-spring-boot-starters</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>Triones:Pay:BootStarters</name>
+  <name>Triones:Payment:BootStarters</name>
   <url>http://maven.apache.org</url>
   <modules>
     <module>triones-wxpay-spring-boot-starter</module>
@@ -26,8 +26,8 @@
         <scope>import</scope>
       </dependency>
       <dependency>
-        <groupId>com.trionesdev.pay</groupId>
-        <artifactId>triones-pay</artifactId>
+        <groupId>com.trionesdev.payment</groupId>
+        <artifactId>triones-payment</artifactId>
         <version>1.0-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
@@ -40,7 +40,7 @@
       </dependency>
 
       <dependency>
-        <groupId>com.moensun.pay</groupId>
+        <groupId>com.trionesdev.payment</groupId>
         <artifactId>triones-wxpay-spring-boot-starter</artifactId>
         <version>${project.version}</version>
       </dependency>
