--- a/triones-wxpay-spring-boot-starter/pom.xml
+++ b/triones-wxpay-spring-boot-starter/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.trionesdev.pay</groupId>
-        <artifactId>triones-pay-spring-boot-starters</artifactId>
+        <groupId>com.trionesdev.payment</groupId>
+        <artifactId>triones-payment-spring-boot-starters</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>triones-wxpay-spring-boot-starter</artifactId>
-    <name>Triones:Pay:WxPay:Starter</name>
+    <name>Triones:Payment:WxPay:Starter</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -32,8 +32,8 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.trionesdev.pay</groupId>
-            <artifactId>triones-pay-wxpay</artifactId>
+            <groupId>com.trionesdev.payment</groupId>
+            <artifactId>triones-payment-wxpay</artifactId>
         </dependency>
     </dependencies>
 </project>
